[Task 43] Fix profile header image overlap issue

--- a/src/components/app/Profile/profile.scss
+++ b/src/components/app/Profile/profile.scss
@@ -399,6 +399,8 @@
     height: 215px;
     width: 100%;
     object-fit: cover;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
   }
 }
 .right-section {
